k8s/demo/ovsc-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ovsc-nodeport
  name: ovsc-nodeport
spec:
  ports:
  - name: 3000-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: openvscode1
  type: NodePort
status:
  loadBalancer: {}
