k8s/demo/ovsc-svc1.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ovsc-service1
  name: ovsc-service1
spec:
  ports:
  - name: 80-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: openvscode1
  type: ClusterIP
