k8s/demo/ovsc-svc2.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ovsc-service2
  name: ovsc-service2
spec:
  ports:
  - name: 80-3000
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: openvscode2
  type: ClusterIP
