k8s/demo/ovsc-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ovsc-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: opencodeserver.com
    http:
      paths:
      - backend:
          service:
            name: ovsc-service1
            port:
              number: 3000
        path: /1(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: ovsc-service2
            port:
              number: 3000
        path: /2(/|$)(.*)
        pathType: Prefix
